--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@ nav{
     background: #101011;
     height: 80px;
     width: 100%;
+    position:fixed;
+	z-index:1000;
 }
 
 img{
@@ -30,13 +32,15 @@ img{
     padding: 2px;
     padding-left: 20px;
     padding-top: 10px;
+    color: yellow;
+    font-size: 35px;
 }
 
 ul{
     position: fixed;
     width: 100%;
     height: 100%;
-    background: #2c3e50;
+    background:black;
     top: 80px;
     left: -100%;
     text-align: center;
@@ -56,11 +60,15 @@ nav ul li a{
     padding: 7px 13px;
     border-radius: 3px;
     text-transform: uppercase;
+    background: ;
 }
 
-a:hover,a.active{
-    background: none;
-    color: #0082e6;
+a:hover, a.active{
+    color: yellow;
+    text-decoration: none;
+    transition: .5s;
+    
+
 }
 
 .checkbtn{
@@ -120,11 +128,7 @@ a:hover,a.active{
         padding: 7px 13px;
         border-radius: 3px;
         text-transform: uppercase;
-    }
-
-    a.active,a:hover{
-        background: #1b9bff;
-        transition: .5s;
+        text-decoration: none;
     }
 
     .checkbtn{
