Added sections Classes and comments

--- a/css/style.css
+++ b/css/style.css
@@ -11,14 +11,12 @@ body{
     background-size: 100% 100%;
     background-attachment: fixed; 
 }
+
+/*--------------------- Header ---------------------*/
+
 nav{
     background: #101011;
     height: 80px;
-    width: 100%;
-}
-
-img{
-    height: 600px;
     width: 100%;
 }
 
@@ -80,13 +78,30 @@ a:hover,a.active{
     left: 0;
 }
 
+/*--------------------- Carrousel ---------------------*/
+
 .carousel{
     position: relative;
     display: block;
     z-index: 0;
 }
 
+img{
+    height: 300px;
+    width: 100%;
+}
+
+/*--------------------- Welcome  ---------------------*/
+/*--------------------- Services ---------------------*/
+/*---------------------  MarksCa ---------------------*/
+/*---------------------  Galery  ---------------------*/
+/*---------------------     We   ---------------------*/
+/*---------------------  Contact ---------------------*/
+
 @media (min-width: 858px){
+
+    /*--------------------- Header ---------------------*/
+
     .logo{
         width: 250px;
         height: 80px;
@@ -130,5 +145,18 @@ a:hover,a.active{
     .checkbtn{
         display: none;    
     }
+
+    /*--------------------- Carrousel ---------------------*/
+    img{
+        height: 600px;
+        width: 100%;
+    }
+
+    /*--------------------- Welcome  ---------------------*/
+    /*--------------------- Services ---------------------*/
+    /*---------------------  MarksCa ---------------------*/
+    /*---------------------  Galery  ---------------------*/
+    /*---------------------     We   ---------------------*/
+    /*---------------------  Contact ---------------------*/
 
 }
