Added Flex to Services and galery's items

--- a/css/style.css
+++ b/css/style.css
@@ -101,8 +101,14 @@ img{
 
 /*--------------------- Welcome  ---------------------*/
 /*--------------------- Services ---------------------*/
+.services .card{
+    width: 33.33%;
+}
 /*---------------------  MarksCa ---------------------*/
 /*---------------------  Galery  ---------------------*/
+.figure{
+    width: 33.33%;
+}
 /*---------------------     We   ---------------------*/
 /*---------------------  Contact ---------------------*/
 
