Fixing the responsive

--- a/css/style.css
+++ b/css/style.css
@@ -102,12 +102,12 @@ img{
 /*--------------------- Welcome  ---------------------*/
 /*--------------------- Services ---------------------*/
 .services .card{
-    width: 33.33%;
+    width: 99%;
 }
 /*---------------------  MarksCa ---------------------*/
 /*---------------------  Galery  ---------------------*/
 .figure{
-    width: 33.33%;
+    width: 99%;
 }
 /*---------------------     We   ---------------------*/
 /*---------------------  Contact ---------------------*/
@@ -164,8 +164,14 @@ img{
 
     /*--------------------- Welcome  ---------------------*/
     /*--------------------- Services ---------------------*/
+    .services .card{
+        width: 33.33%;
+    }
     /*---------------------  MarksCa ---------------------*/
     /*---------------------  Galery  ---------------------*/
+    .figure{
+        width: 33.33%;
+    }
     /*---------------------     We   ---------------------*/
     /*---------------------  Contact ---------------------*/
 
