--- a/css/style.css
+++ b/css/style.css
@@ -63,11 +63,8 @@ nav ul li a{
 a:hover, a.active{
     color: yellow;
     text-decoration: none;
-    transition: .5s;
-    
-
+    transition: .5s;  
 }
-
 .checkbtn{
     font-size: 30px;
     color: white;
@@ -94,12 +91,24 @@ a:hover, a.active{
     padding-top: 30px;
 }
 
-img{
-    height: 300px;
+.carousel-item img{
+    height: 350px;
     width: 100%;
 }
 
 /*--------------------- Welcome  ---------------------*/
+.flexbox-container{
+    background: black;
+    color:white;
+    padding: 25px;
+}
+.flexbox-container h1{
+    font-size: 25px;
+}
+.flexbox-container img{
+    width: 100%;
+}
+
 /*--------------------- Services ---------------------*/
 .services .card{
     width: 99%;
@@ -111,6 +120,8 @@ img{
 }
 /*---------------------     We   ---------------------*/
 /*---------------------  Contact ---------------------*/
+
+
 
 @media (min-width: 858px){
 
@@ -157,12 +168,42 @@ img{
     }
 
     /*--------------------- Carrousel ---------------------*/
-    img{
-        height: 600px;
+    .img{
+        height: 300px;
         width: 100%;
+    }
+    .carousel-item img{
+        width: 100%;
+        height: 630px;
     }
 
     /*--------------------- Welcome  ---------------------*/
+    .flexbox-container h1{
+        margin-top: 50px;
+        font-size: 30px;
+        margin-bottom: 40px;
+    }
+    .flexbox-container img{
+        width: 500px;
+        height: 300px;
+        margin-left: 80px;
+       
+    }
+    .flexbox-container{
+        display: -ms-flex;
+        display: -webkit-flex;
+        display: flex;
+    }
+    .flexbox-container > div {
+        width: 50%;
+        padding: 20px;
+    }
+    
+    .flexbox-container > div:first-child {
+        margin-right: 20px;
+    }
+    
+        
     /*--------------------- Services ---------------------*/
     .services .card{
         width: 33.33%;
@@ -174,5 +215,117 @@ img{
     }
     /*---------------------     We   ---------------------*/
     /*---------------------  Contact ---------------------*/
+    .contenedor{
+        width: 100%;
+        background: #6C757D;
+        padding: 40px;
+        margin: 40px auto;
+        box-shadow: 0px 1px 2px rgba(0, 0, 0, .5);
+    }
+    .contenedor h1{
+        font-size: 30px;
+        font-weight: 600;
+        text-align: center;
+        margin-bottom: 40px;
+        color: yellow;
+    }
+    .contenido{
+        display: flex;
+        width: 100%;
+        overflow: hidden;
+    }
+    .contenido .info,
+    .contenido .formulario{
+        width: 50%;
+    }
+    
+    /*--------------------- estilos Info ---------------------*/
+    /*--------------------- ---------------------*/
+    .info{
+        padding-left: 60px;
+        margin-top: 40px;
+    }
+    
+    .info .col{
+        width: 100%;
+        display: flex;
+        margin-bottom: 20px;
+        font-size: 25px;
+        align-items: center;
+        flex-wrap: nowrap;
+    }
+    
+    .info .col .icono{
+        color: yellow;
+        margin-right: 30px;
+
+    }
+    
+    .info .col p{
+        color:black;
+        margin-top: 3px;
+        font-size: 20px;
+        
+    }
+
+    .info .redes-s{
+        width: 100%;
+        overflow: hidden;
+        padding-left: 25px;
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .info .redes-s a{
+        display: flex;
+        width: 60px;
+        height: 60px;
+        background: #6C757D;
+        color: snow;
+        margin: 20px;
+        justify-content: center;
+        align-items: center;
+        font-size: 18px;
+        border-radius: 50%;
+        box-shadow: 0px 3px 8px rgba(0, 0, 0, .4);
+    }
+    .info .redes-s a:hover{
+        background:yellow;
+    
+    }
+    /*--------------------- Estilos Formulario ---------------------*/
+    /*--------------------- ---------------------*/
+    .formulario{
+        padding-left: 10px;
+    }
+    .formulario input[type='text'],
+    .formulario textarea{
+        width: 100%;
+        margin-bottom: 15px;
+        padding: 12px 20px;
+        border: 1px solid #999;
+        color: #999;
+        font-family: sans-serif;
+        font-weight: 400;
+        outline: 0;
+    }
+    .formulario textarea{
+        max-width: 100%;
+        min-width: 100%;
+        min-height: 150px;
+        max-height: 200px;
+    
+    }
+    .formulario input[type='text']:focus,
+    .formulario textarea:focus{
+        border: 3px solid yellow;
+    }
+    .formulario button{
+        padding: 12px 30px;
+        border: transparent;
+        background:yellow;
+        color: black;
+        cursor: pointer;
+        float: right;
+    }
 
 }
