--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ a:hover, a.active{
 
 /*--------------------- Welcome  ---------------------*/
 .flexbox-container{
-    background: black;
+    background: #202020;
     color:white;
     padding: 25px;
 }
@@ -120,10 +120,60 @@ a:hover, a.active{
 }
 /*---------------------     We   ---------------------*/
 /*---------------------  Contact ---------------------*/
+.contenedor{
+    width: 100%;
+    background:#202020;
+    padding: 40px;
+    margin: 40px auto;
+}
+.contenedor h1{
+    font-size: 30px;
+    font-weight: 600;
+    text-align: center;
+    margin-bottom: 40px;
+    color: yellow;
+}
+.contenido{
+    display: flex;
+    width: 100%;
+    overflow: hidden;
+}
+.formulario input[type='text'],
+    .formulario textarea{
+        width: 100%;
+        margin-bottom: 15px;
+        padding: 12px 20px;
+        border: 1px solid #999;
+        color: #999;
+        font-family: sans-serif;
+        font-weight: 400;
+        outline: 0;
+    }
+    .formulario input[type='text']:focus,
+    .formulario textarea:focus{
+        border: 3px solid yellow;
+    }
+    .formulario button{
+        padding: 12px 30px;
+        border: transparent;
+        background:yellow;
+        color: black;
+        cursor: pointer;
+        float: right;
+        border-radius: 10%;
+    }
+    /*---------------------  footer---------------------*/
+   
 
 
+@media screen and (max-width: 700px) {
+    .info{
+    display:none;
+    }
+    }
 
-@media (min-width: 858px){
+
+@media  (min-width: 858px){
 
     /*--------------------- Header ---------------------*/
 
@@ -215,12 +265,14 @@ a:hover, a.active{
     }
     /*---------------------     We   ---------------------*/
     /*---------------------  Contact ---------------------*/
+    .contenedor__all{
+        background:#202020;
+    }
     .contenedor{
-        width: 100%;
-        background: #6C757D;
+        width: 85%;
+        background:#202020;
         padding: 40px;
         margin: 40px auto;
-        box-shadow: 0px 1px 2px rgba(0, 0, 0, .5);
     }
     .contenedor h1{
         font-size: 30px;
@@ -262,10 +314,9 @@ a:hover, a.active{
     }
     
     .info .col p{
-        color:black;
+        color:white;
         margin-top: 3px;
-        font-size: 20px;
-        
+        font-size: 20px; 
     }
 
     .info .redes-s{
@@ -277,19 +328,24 @@ a:hover, a.active{
     }
     .info .redes-s a{
         display: flex;
-        width: 60px;
-        height: 60px;
-        background: #6C757D;
+        width: 50px;
+        height: 50px;
         color: snow;
         margin: 20px;
         justify-content: center;
         align-items: center;
-        font-size: 18px;
+        font-size: 25px;
         border-radius: 50%;
-        box-shadow: 0px 3px 8px rgba(0, 0, 0, .4);
+        border:2px solid yellow;
+        box-shadow: 0px 3px 8px rgba(246, 210, 7, 0.4);
+    }
+    .redes-s img{
+        width: 30px;
+        height: 30px;
+        
     }
     .info .redes-s a:hover{
-        background:yellow;
+        background:#FFE52F;
     
     }
     /*--------------------- Estilos Formulario ---------------------*/
@@ -326,6 +382,8 @@ a:hover, a.active{
         color: black;
         cursor: pointer;
         float: right;
+        border-radius: 10%;
     }
-
+    /*---------------footer-------------*/
+    
 }
