--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body{
     font-family: sans-serif;
     background-size: 100% 100%;
     background-attachment: fixed; 
+    background-color: #202020;
 }
 
 /*--------------------- Header ---------------------*/
@@ -96,6 +97,11 @@ a:hover, a.active{
     width: 100%;
 }
 
+.carousel .carousel-caption{
+    background-color: rgba(20,20,20,0.5) ;
+    border-radius: 45px;
+}
+
 /*--------------------- Welcome  ---------------------*/
 .flexbox-container{
     background: #202020;
@@ -110,8 +116,40 @@ a:hover, a.active{
 }
 
 /*--------------------- Services ---------------------*/
+.services{
+    color: white;
+}
+
 .services .card{
     width: 99%;
+}
+
+h2{
+    text-align: center;
+}
+
+.services p{
+    text-align: center;
+}
+
+.services .d-flex{
+    background-color: #202020;
+}
+
+.services .card{
+    background-color: #202020;
+}
+
+.services a {
+    background-color: #202020;
+    border:2px solid yellow;
+    box-shadow: 0px 3px 8px rgba(246, 210, 7, 0.4);
+}
+
+.services a:hover{
+    background:#FFE52F;
+    border:2px solid yellow;
+    color: black;
 }
 /*---------------------  MarksCa ---------------------*/
 /*---------------------  Galery  ---------------------*/
