Fixing the FigCaption Color

--- a/css/style.css
+++ b/css/style.css
@@ -193,7 +193,7 @@ h2{
 }
 
 .figure-caption{
-    color: yellowgreen;
+    color: rgb(200,150,0);
 }
 /*---------------------     We   ---------------------*/
 /*---------------------  Contact ---------------------*/
