--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,10 @@ a:hover, a.active{
     font-size: 25px;
 }
 .flexbox-container img{
-    width: 100%;
+    display: block;
+    margin: auto;
+    width:250px;
+    height: 250px;
 }
 
 /*--------------------- Services ---------------------*/
@@ -240,15 +243,65 @@ h2{
         border-radius: 10%;
     }
     /*---------------------  footer---------------------*/
+    footer {
+        width: 100%;
+        background: black;
+        color: white;
+        max-width: 1650px;
+        margin: auto;
+        padding: 40px;
+      }
+      
+      .contenedor1 {
+        flex-wrap: wrap;
+      }
+      .column--redes .column--contactos {
+        margin-top: 40px;
+      }
+      footer h2 {
+        margin-top: 20px;
+        font-size: 22px;
+       
+      }
+      
+      footer img {
+        width: 36px;
+        height: 36px;
+      }
+      
+      .column--redes a {
+        font-size: 15px;
+        margin-top: 10px;
+        color: #c7c7c7;
+        margin-left: 20px;
+      }
+      
+      .column--redes .row {
+        margin-top: 20px;
+        display: flex;
+        margin-left: auto;
+      }
+      .row2 {
+        margin-top: 20px;
+        display: flex;
+      }
+      
+      .row2 p {
+        margin-top: 10px;
+        margin-left: 20px;
+        max-width: 140px;
+      }
    
 
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 715px) {
     .info{
     display:none;
     }
+    .contenedor1 {
+        flex-wrap: wrap;
+      }
     }
-
 
 @media  (min-width: 858px){
 
@@ -308,10 +361,10 @@ h2{
     .flexbox-container h1{
         margin-top: 50px;
         font-size: 30px;
-        margin-bottom: 40px;
+        margin-bottom: 20px;
     }
     .flexbox-container img{
-        width: 500px;
+        width: 400px;
         height: 300px;
         margin-left: 80px;
        
@@ -462,5 +515,26 @@ h2{
         border-radius: 10%;
     }
     /*---------------footer-------------*/
+    .contenedor1 {
+        display: flex;
+        justify-content: space-between;
+      }
+      .column--informacion {
+        max-width: 400px;
+      }
     
+      .column--informacion p {
+        font-size: 14px;
+    
+        margin-top: 20px;
+      }
+      .column--redes {
+        font-size: 22px;
+      }
+      .column--redes {
+        max-width: 400px;
+      }
+      .column--contactos {
+        max-width: 400px;
+      }
 }
