--- a/css/style.css
+++ b/css/style.css
@@ -163,6 +163,10 @@ h2{
     color: black;
 }
 /*---------------------  MarksCa ---------------------*/
+.marksCarrusel .carousel-item img{
+    height: 400px;
+}
+
 /*---------------------  Galery  ---------------------*/
 .card{
     background-color: #202020;
@@ -354,7 +358,7 @@ h2{
     }
     .carousel-item img{
         width: 100%;
-        height: 630px;
+        height: 400px;
     }
 
     /*--------------------- Welcome  ---------------------*/
