--- a/css/style.css
+++ b/css/style.css
@@ -164,7 +164,8 @@ h2{
 }
 /*---------------------  MarksCa ---------------------*/
 .marksCarrusel .carousel-item img{
-    height: 400px;
+    width: 80%;
+    height: 300px;
 }
 
 /*---------------------  Galery  ---------------------*/
@@ -204,18 +205,25 @@ h2{
 }
 
 /*---------------------     We   ---------------------*/
-#info {
 
+
+#info {
+    background: #e9f355;
     text-align: center;
     padding: 20px;
+   
   }
   #info .contenedor {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    background: #e9f355;
+    margin-top: -20px;
+    
   }
   .info-vo {
     margin: 20px;
+    
   }
   .info-vo img {
     width: 300px;
@@ -223,6 +231,7 @@ h2{
     border-radius: 50%;
     border: 3px  solid yellow;
   }
+  
 /*---------------------  Contact ---------------------*/
 .contenedor{
     width: 100%;
@@ -297,13 +306,13 @@ h2{
         font-size: 15px;
         margin-top: 10px;
         color: #c7c7c7;
-        margin-left: 20px;
+        margin-left: 30px;
       }
       
       .column--redes .row {
         margin-top: 20px;
         display: flex;
-        margin-left: auto;
+         
       }
       .row2 {
         margin-top: 20px;
@@ -378,7 +387,7 @@ h2{
     }
     .carousel-item img{
         width: 100%;
-        height: 400px;
+        height: 640px;
     }
 
     /*--------------------- Welcome  ---------------------*/
@@ -413,11 +422,38 @@ h2{
         width: 33.33%;
     }
     /*---------------------  MarksCa ---------------------*/
+    .marksCarrusel .carousel-item img{
+        width: 150px;
+        height: 150px;
+    }
     /*---------------------  Galery  ---------------------*/
     .figure{
         width: 33.33%;
     }
     /*---------------------     We   ---------------------*/
+    .google_map{
+        margin-top: 20px;
+        margin-left: 20px;
+        width:50%;
+        margin-right:2%;
+        float: left;
+    }
+    .google_map iframe{
+       width:100%;
+    }
+    .flexbox-container{
+        display: -ms-flex;
+        display: -webkit-flex;
+        display: flex;
+    }
+    .flexbox-container > div {
+        width: 50%;
+        padding: 20px;
+    }
+    
+    .flexbox-container > div:first-child {
+        margin-right: 20px;
+    }
     /*---------------------  Contact ---------------------*/
     .contenedor__all{
         background:#202020;
@@ -560,5 +596,8 @@ h2{
       }
       .column--contactos {
         max-width: 400px;
+      }
+      .row2 {
+          margin-right: 100px;
       }
 }
