--- a/css/style.css
+++ b/css/style.css
@@ -135,8 +135,9 @@ h2{
     text-align: center;
 }
 
-.services p{
-    text-align: center;
+.services .solutions{
+    margin: 3% 10%;
+    text-align: left;
 }
 
 .services .d-flex{
@@ -152,6 +153,8 @@ h2{
 }
 
 .services a {
+    /*No Buttons*/
+    display: none;
     background-color: #202020;
     border:2px solid yellow;
     box-shadow: 0px 3px 8px rgba(246, 210, 7, 0.4);
@@ -163,9 +166,13 @@ h2{
     color: black;
 }
 /*---------------------  MarksCa ---------------------*/
+.marksCarrusel{
+    width: 100%;
+}
+
 .marksCarrusel .carousel-item img{
-    width: 80%;
     height: 250px;
+    margin: 1% auto;
 }
 
 /*---------------------  Galery  ---------------------*/
@@ -207,12 +214,19 @@ h2{
 /*---------------------     We   ---------------------*/
 
 .google_map{
-    width: 800%;
+    width: 100%;
 }
+
+.google_map iframe{
+    width: 100%;
+    height: 100%;
+}
+
 #info {
     background: #e9f355;
     text-align: center;
     padding: 20px;
+    display: none;
    
   }
   #info .contenedor {
@@ -228,8 +242,8 @@ h2{
     
   }
   .info-vo img {
-    width: 300px;
-    height: 300px;
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
     border: 3px  solid yellow;
   }
@@ -389,7 +403,7 @@ h2{
     }
     .carousel-item img{
         width: 100%;
-        height: 640px;
+        height: 550px;
     }
 
     /*--------------------- Welcome  ---------------------*/
@@ -420,13 +434,21 @@ h2{
     
         
     /*--------------------- Services ---------------------*/
+    .services .solutions{
+        margin: 1% 30%;
+        text-align: left;
+    }
+
     .services .card{
         width: 33.33%;
     }
+
+    
     /*---------------------  MarksCa ---------------------*/
+    
     .marksCarrusel .carousel-item img{
-        width: 150px;
-        height: 150px;
+        height: 300px;
+        width: 300px !important;
     }
     /*---------------------  Galery  ---------------------*/
     .figure{
@@ -440,6 +462,13 @@ h2{
         margin-right:2%;
         float: left;
     }
+
+    .google_map iframe{
+        width: 90%;
+        height: 90%;
+        margin: 2% auto;
+    }
+
     .flexbox-container{
         display: -ms-flex;
         display: -webkit-flex;
