--- a/css/whatsapp.css
+++ b/css/whatsapp.css
@@ -10,10 +10,12 @@
 	text-align:center;
     font-size:30px;
 	box-shadow: 2px 2px 3px #999;
-  z-index:100;
+    z-index:100;
     text-decoration: none;
 }
 
 .my-float{
 	margin-top:16px;
+	width: 60px;
+	height: 60px;
 }
