Add Some Changes

--- a/css/style.css
+++ b/css/style.css
@@ -669,6 +669,7 @@ h2{
       .column--informacion .row{
         justify-content: left;
         width: 45%;
+        margin-left: 5%;
     }
 
     .fila{
