Se agrega estilos de scroll y secciones

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,14 @@
+/*--------------------- Srcoll Personalizado ---------------------*/
+body::-webkit-scrollbar{
+    width: 10px;
+   
+}
+body::-webkit-scrollbar-thumb{
+    background: #FFE52F;
+    border-radius: 6px;
+}
 
+/*--------------------- Pantallas Emergentes ---------------------*/
 .contenedor-alert{
     display: flex;
     flex-wrap: wrap;
@@ -17,7 +27,26 @@
 .title-baterias{
     color:yellow;
 }
+/*--------------------- Animados ---------------------*/
+.animado{
+    opacity: 0;
+    transition: all 0.5s;
+}
+.mostrarArriba{
+    animation: mostrarArriba 1s;
+}
 
+@keyframes mostrarArriba{
+    0%{
+        transform: translateY(60px);
+    }
+    100%{
+        transform: translateY(0);
+    }
+
+}
+
+/*---------------------  Estilos Base ---------------------*/
 *{
     padding: 0;
     margin: 0;
@@ -40,7 +69,7 @@ h1,h2,h3,h4,h5,h6{
 /*--------------------- Header ---------------------*/
 
 nav{
-    background: #101011;
+    background: black;
     height: 80px;
     width: 100%;
     position:fixed;
@@ -55,8 +84,7 @@ nav{
     padding: 2px;
     padding-left: 20px;
     padding-top: 10px;
-    color: yellow;
-    font-size: 35px;
+    
 }
 
 ul{
@@ -188,10 +216,11 @@ h2{
 /*---------------------  MarksCa ---------------------*/
 .marksCarrusel{
     width: 100%;
+    
 }
 
-.marksCarrusel .carousel-item img{
-    height: 200px;
+.marksCarrusel img{
+    height: 150px;
     margin: 5% auto;
 }
 
@@ -393,12 +422,12 @@ h2{
 
     /*--------------------- Header ---------------------*/
 
-    .logo{
+    .logo {
         width: 250px;
         height: 80px;
         margin: auto;
         line-height: 80px;
-        padding: 2px;
+        padding-bottom: 10px;
         padding-left: 20px;
     }
 
@@ -406,7 +435,7 @@ h2{
         position: relative;
         width: 70%;
         height: 100%;
-        background:  #101011;
+        background:  black;
         top: 0px;
         left: 0%;
         text-align: right;
