Add some Carousel Changes

--- a/css/style.css
+++ b/css/style.css
@@ -497,7 +497,7 @@ h2{
     .flexbox-container img{
         width: 400px;
         height: 300px;
-        margin-left: 80px;
+        margin-left: 1%;
        
     }
     .flexbox-container{
